--- a/templates/default.html
+++ b/templates/default.html
@@ -34,7 +34,7 @@
   <!-- CSS -->
   <link href='/assets/styles.css' rel='stylesheet' type='text/css'/>
 </head>
-<body{% if path == 'en/demand-for-od-engagement-tools' %} class='demand-and-engagement'{% endif %}>
+<body>
   <header id='header' name='header'>
     <div class='content'>
       {% include 'partials/_header.html' %}
