--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -478,11 +478,11 @@ a.menu {
   padding: 10px;
   text-align: left; }
 
-@media (max-width: 767px) {
+@media (max-width: 870px) {
   #header a.logo {
     width: 170px; } }
 
-@media (max-width: 960px) {
+@media (max-width: 641px) {
   #header .logo span {
     display: none; }
   #header .menu {
@@ -525,7 +525,7 @@ a.menu {
   #header h2 {
     display: none; } }
 
-@media (min-width: 961px) {
+@media (min-width: 641px) {
   #header .menu {
     display: none; }
   #header .options {
@@ -680,7 +680,7 @@ a.menu {
 #main .body img {
   max-width: 100%; }
 
-@media (max-width: 960px) {
+@media (max-width: 641px) {
   #main .header .links {
     border-bottom: 1px solid #ddd;
     margin: -10px -10px 10px; }
@@ -732,8 +732,7 @@ a.menu {
   #main .sidebar {
     display: none; } }
 
-@media (min-width: 961px) {
-  /* TEST FOR LEFT SIDEBAR */
+@media (min-width: 641px) {
   #main .header .links {
     float: right;
     padding: 10px 0; }
@@ -744,34 +743,35 @@ a.menu {
   #main .header .options {
     display: none; }
   #main .sidebar + .body {
-    margin-right: 320px; }
+    margin-right: 260px; }
   #main .body {
     border-right: 1px solid #e0e0e0;
     padding-right: 20px; }
   #main .sidebar {
     float: right;
-    width: 300px; }
+    width: 240px; }
     #main .sidebar.sticky {
       margin-right: 20px;
       margin-top: 20px;
       position: absolute;
       right: 0;
       top: 0; }
-  body.demand-and-engagement #main .sidebar {
-    float: left; }
-    body.demand-and-engagement #main .sidebar.sticky {
-      right: auto;
-      left: 0;
-      margin-right: 0;
-      margin-left: 20px; }
-  body.demand-and-engagement #main .sidebar + .body {
-    margin-right: 0;
-    margin-left: 320px; }
-  body.demand-and-engagement #main .body {
-    border-right: 0;
-    padding-right: 0;
-    border-left: 1px solid #e0e0e0;
-    padding-left: 20px; } }
+    #main .sidebar h2, #main .sidebar h3 {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap; } }
+
+@media (min-width: 760px) {
+  #main .sidebar + .body {
+    margin-right: 300px; }
+  #main .sidebar {
+    width: 280px; } }
+
+@media (min-width: 870px) {
+  #main .sidebar + .body {
+    margin-right: 320px; }
+  #main .sidebar {
+    width: 300px; } }
 
 #footer {
   font-size: 12px; }
