--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -1,10 +1,12 @@
+---
+---
 /* Normalize.css */
 
 @import '_normalize.scss';
 
 /* Bourbon */
 
-@import 'bourbon';
+@import 'bourbon/bourbon';
 
 /* Icons */
 
@@ -141,6 +143,6 @@ a.menu {
 
 /* Partials */
 
-@import 'partials/_header.scss';
-@import 'partials/_main.scss';
-@import 'partials/_footer.scss';
+@import '_header.scss';
+@import '_main.scss';
+@import '_footer.scss';
