Convert metalsmith to liquid

--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -63,7 +63,6 @@
     <h2><a href='http://www.worldbank.org/projects'>Projects and Operations</a></h2>
     <ul>
       <li><a href='http://search.worldbank.org/projects'>Search Projects</a></li>
-      <li><a href='http://web.worldbank.org/WBSITE/EXTERNAL/PROJECTS/0,,contentMDK:21790401~menuPK:5119395~pagePK:41367~piPK:51533~theSitePK:40941,00.html'>Our Focus</a></li>
       <li><a href='http://web.worldbank.org/WBSITE/EXTERNAL/PROJECTS/0,,contentMDK:20120721~menuPK:232467~pagePK:41367~piPK:51533~theSitePK:40941,00.html'>Products &amp; Services</a></li>
       <li><a href='http://web.worldbank.org/WBSITE/EXTERNAL/PROJECTS/0,,menuPK:64383817~pagePK:64387457~piPK:64387543~theSitePK:40941,00.html'>Country Lending</a></li>
       <li><a href='http://web.worldbank.org/WBSITE/EXTERNAL/PROJECTS/PROCUREMENT/0,,pagePK:84271~theSitePK:84266,00.html'>Procurement</a></li>
@@ -104,7 +103,7 @@
 </section>
 
 <nav class='agencies'>
-  <a class='home' href='http://www.worldbank.org/'><img src='/images/logo-footer.png'></a>
+  <a class='home' href='http://www.worldbank.org/'><img src='/assets/images/logo-footer.png'></a>
   <nav class='links'>
     <a href='http://web.worldbank.org/WBSITE/EXTERNAL/EXTABOUTUS/EXTIBRD/0,,menuPK:3046081~pagePK:64168427~piPK:64168435~theSitePK:3046012,00.html'>IBRD</a>
     <a href='http://www.worldbank.org/ida/'>IDA</a>
