--- a/assets/_scss/_header.scss
+++ b/assets/_scss/_header.scss
@@ -10,7 +10,7 @@
     color: inherit;
   }
   a.logo {
-    background: url(/images/logo-en.gif) no-repeat left center;
+    background: url(/assets/images/logo-en.gif) no-repeat left center;
     display: block;
     float: left;
     height: 42px;
