--- a/_includes/_sidebar.html
+++ b/_includes/_sidebar.html
@@ -1,15 +1,6 @@
 
 <ul>
-	<li{% if locale == path %} class='active'{% endif %}><h2><a href='/{{ locale }}'>Open Government Data Toolkit</a></h2></li>
-	{% for item in sidebar %}
-	<li{% if item.link == '/'+ path %} class='active'{% endif %}><h3><a href='{{ item.link }}'>{{ item.name }}</a></h3>
-	{% if item.name == title %}
-	{% for heading in headings %}
-	{% if loop.first %}<ul>{% endif %}
-	<li><a href="#{{ heading.id }}">{{ heading.text }}</a></li>
-	{% if loop.last %}</ul>{% endif %}
-	{% endfor %}
-	{% endif %}
-	</li>
-	{% endfor %}
+{% for item in locale.sidebar %}
+<li {%if page.url == item.link %} class="active"{% endif %}><{{item.hdr}}><a href="{{ item.link }}">{{ item.title }}</a></{{ item.hdr }}></li>
+{% endfor %}
 </ul>
