--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,35 +1,28 @@
-{% if locale == 'en' %}
-{% set locales = en_locales %}
-{% set sidebar = en_sidebar %}
-{% elif locale == 'es' %}
-{% set locales = es_locales %}
-{% set sidebar = es_sidebar %}
+{% if page.locale == 'es' %}
+{% assign locale = site.lang.es %}
+{% assign sidebar = es_sidebar %}
 {% else %}
-{% set locales = en_locales %}
-{% set sidebar = en_sidebar %}
+{% assign locale = site.lang.en %}
+{% assign page.locale = 'en' %}
+{% assign sidebar = en_sidebar %}
 {% endif %}
 <!DOCTYPE html PUBLIC '-//W3C//DTD XHTML 1.0 Strict//EN' 'http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd'>
-<html xmlns='http://www.w3.org/1999/xhtml' xml:lang='{{ locale | default('en') }}' lang='{{ locale | default('en') }}' dir='ltr'>
+<html xmlns='http://www.w3.org/1999/xhtml' xml:lang='{{ page.locale }}' lang='{{ page.locale }}' dir='ltr'>
 <head>
-  <title>{{ title }} | Data</title>
+  <title>{{ page.title }} | Data</title>
 
   <meta name='viewport' content='width=device-width, initial-scale=1'/>
   <meta http-equiv='Content-Type' content='text/html; charset=utf-8'/>
-  <meta name='description' content='{{ locales.description }}'/>
-  <meta name='dcterms.description' content='{{ locales.decription }}'/>
-  <meta name='abstract' content='{{ locales.abstract }}'/>
+  <meta name='description' content='{{ locale.description }}'/>
+  <meta name='dcterms.description' content='{{ locale.description }}'/>
+  <meta name='abstract' content='{{ locale.abstract }}'/>
   <meta name='dcterms.date' content='2013-10-24T00:00:00Z' />
-  <link rel='prev' href='http://data.worldbank.org/open-government-data-toolkit' />
-  <link rel='up' href='http://data.worldbank.org/open-government-data-toolkit' />
-  <link rel='next' href='http://data.worldbank.org/about/open-government-data-toolkit/it-solutions' />
-  <link rel='canonical' href='http://data.worldbank.org/about/open-government-data-toolkit/knowledge-repository' />
-  <link rel='shortcut icon' href='/profiles/datafinder/themes/datum/favicon.ico' type='image/x-icon' />
   
-  <link rel='canonical' href='http://data.worldbank.org/about/open-government-data-toolkit/knowledge-repository'/>
+  <link rel='canonical' href='{{ site.base }}/{{ page.url }}'/>
   <meta name='revisit-after' content='7 days'/>
 
   <!-- Favicons -->
-  {% include 'partials/_favicons.html' %}
+  {% include _favicons.html %}
 
   <!-- CSS -->
   <link href='/assets/styles.css' rel='stylesheet' type='text/css'/>
@@ -37,34 +30,41 @@
 <body>
   <header id='header' name='header'>
     <div class='content'>
-      {% include 'partials/_header.html' %}
+      {% include _header.html %}
     </div>
   </header>
 
   <section id='main' name='main'>
     <div class='content'>
-      <!-- <nav class='locale'>{{ locales.header.locale.prefix }}: {% if locale == 'en' %}<strong>{{ locales.header.locale.en }}</strong> | <a href='/es{{ path | replace('^\w+', '') }}'>{{ locales.header.locale.es }}</a>{% elif locale == 'es' %}<a href='/en{{ path | replace('^\w+', '') }}'>{{ locales.header.locale.en }}</a> | <strong>{{ locales.header.locale.es }}</strong>{% else %}<strong>{{ locales.header.locale.en }}</strong> | <a href='/es{{ path | replace('^\w+', '') }}'>{{ locales.header.locale.es }}</a>{% endif %}</nav> -->
-
+{% if false %}
+    <nav class='locale'>{{ locale.localeprefix }}
+{% for lang in site.lang.locales %}
+{% if lang[0] == page.locale %}
+    <span>{{ lang[1] }}</span>
+{% else %}
+    <a href="{{ page.url | replace_first: page.locale, lang[0] }}">{{ lang[1] }}</a>
+{% endif %}
+{% endfor %}
+	</nav>
+{% endif %}
       <header class='header'>
         <nav class='links'>
-          {% include 'partials/_social.html' %}
+          {% include _social.html %}
         </nav>
 
         <h1>
           <a href='#main' class='menu'><span>Menu</span></a>
-          {{ title }}
+          {{ page.title }}
         </h1>
       </header>
 
       <section class='main'>
         <aside class='sidebar'>
-          {% include 'partials/_sidebar.html' %}
+          {% include _sidebar.html %}
         </aside>
 
         <section class='body'>
-          {% block content %}
-          {{ contents | safe }}
-          {% endblock %}
+          {{ content }}
         </section>
       </section>
     </div>
@@ -72,7 +72,7 @@
 
   <footer id='footer'>
     <div class='content'>
-      {% include 'partials/_footer.html' %}
+      {% include _footer.html %}
     </div>
   </footer>
 
@@ -189,6 +189,6 @@
   </script>
   
   <!-- User voice -->
-  {% include 'partials/_uservoice.html' %}
+  {% include _uservoice.html %}
 </body>
 </html>
