--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,114 +78,7 @@
   </div>
 
   <!-- JS -->
-  <script src='//code.jquery.com/jquery-1.11.0.min.js'></script>
-
-  <!-- Sticky sidebar -->
-  <script>
-    $(function() {
-      var top = $('#main .sidebar').offset().top;
-      var footer = $('#footer').offset().top;
-      var height = $('#main .sidebar').height();
-      var sticky = function(){
-        var scroll = $(window).scrollTop();
-        if ((scroll + 20) > top) {
-          if ((scroll + 20 + height) > (footer - 20)) {
-            $('#main .sidebar').addClass('sticky').css({ 'top': 'auto', 'bottom': 20 });
-          }
-          else {
-            $('#main .sidebar').addClass('sticky').css({ 'top': (scroll - top + 20), 'bottom': 'auto' });
-          }
-          
-        }
-        else {
-          $('#main .sidebar').removeClass('sticky').css({ 'top': 'auto', 'bottom': 'auto'});
-        }
-      };
-      sticky();
-      $(window).scroll(function() {
-         sticky();
-      });
-    });
-  </script>
-
-  <!-- Dropdown menu for mobile -->
-  <script>
-    $(function() {
-      $('.menu').click(function () {
-        var options = $(this).next('.options');
-        if (options.hasClass('show')) {
-          $('body').removeClass('menu');
-          options.removeClass('show');
-          $(this).removeClass('active');
-        }
-        else {
-          if ($(this).parent().parent().attr('id') == 'header') $('body').addClass('menu');
-          options.addClass('show');
-          $(this).addClass('active');
-        }
-      });
-    });
-  </script>
-
-  <!-- Main links as dropdown for mobile -->
-  <script>
-    $(function() {
-      var options = $('<div class="options"></div>');
-
-      $('#main .sidebar h2 a, #main .sidebar h3 a').each(function () {
-        if (!$(this).parent().parent().hasClass('active')) {
-          var that = $(this).clone();
-          options.append(that);
-        }
-      });
-      
-      $('#main .header .menu').after(options);
-    });
-  </script>
-
-
-  <!-- Footer links as select box for mobile -->
-  <script>
-    $(function() {
-      var links = [{'title': 'Jump to another section'}];
-      $('#footer .content > .links a').each(function () {
-        links.push({
-          'title': $(this).html(),
-          'url': $(this).attr('href'),
-          'type': $(this).parent().prop('tagName')
-        });
-      });
-      
-      var select = $('<select></select>');
-
-      for (i = 0; i < links.length; i++) {
-        var label = links[i].title;
-
-        if (links[i].type == 'H2') {
-          label = label.toUpperCase();
-        }
-        else if (links[i].type == 'LI') {
-          label = '&nbsp;&nbsp;'+ label;
-        }
-
-        var option = $('<option value="'+ links[i].url +'">'+ label +'</option>');
-        
-        $(select).append(option);
-      }
-
-      select.on('change', function (e) {
-        if (this.value.length > 0) {
-          window.location = this.value;
-        }
-      });
-
-      var element = $('<span class="select"></span>').append(select);
-
-      $('#footer .content > .links').before(element);
-    });
-  </script>
-  
-  <!-- User voice -->
-  {% include parts/uservoice.html %}
+  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="/assets/site.js"></script>
 </body>
 </html>
