--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
 <body>
   <header id='header' name='header'>
     <div class='content'>
-      {% include parts/header.html %}
+      {% include en/parts/header.html %}
     </div>
   </header>
 
@@ -69,7 +69,7 @@
 
   <footer id='footer'>
     <div class='content'>
-      {% include parts/footer.html %}
+      {% include en/parts/footer.html %}
     </div>
   </footer>
 
