--- a/assets/_scss/_main.scss
+++ b/assets/_scss/_main.scss
@@ -113,12 +113,47 @@
     }
   }
   .body {
+	h1 {
+	  border-top: 1px solid $red;
+	  margin-top: 1.5em;
+	  padding-top: 0.5em;
+	}
+
+	h3, h4 {
+	  font-weight: bold;
+	}
+
     a {
       color: $red;
     }
     img {
       max-width: 100%;
     }
+
+	blockquote {
+	  font-style: italic;
+	  background: #eee;
+	  padding: 1em;
+
+	  p { margin: 0 }
+	}
+
+	/* bold first link in lists with paragraph styling, for emphasis */
+	li > p a:first-child {
+	  font-weight: bold;
+	}
+
+	.center {
+	  text-align: center;
+	}
+
+	/* for diagnostics */
+	em {
+	  color: green;
+	  background: yellow;
+	  font-weight: bold;
+	  font-style: normal;
+	}
   }
 }
 
