--- a/assets/_scss/_main.scss
+++ b/assets/_scss/_main.scss
@@ -119,8 +119,12 @@
 	  padding-top: 0.5em;
 	}
 
-	h3, h4 {
+	h4 {
 	  font-weight: bold;
+	}
+
+	h3 {
+	  font-size: 16px;
 	}
 
     a {
@@ -130,6 +134,13 @@
       max-width: 100%;
     }
 
+	td, th {
+	  padding: 0.25em 0.75em;
+	}
+
+	td { vertical-align: top }
+	th { vertical-align: bottom }
+	
 	blockquote {
 	  font-style: italic;
 	  background: #eee;
