Add interactive diagram on technology page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,7 @@
 
   <!-- CSS -->
   <link href='/assets/styles.css' rel='stylesheet' type='text/css'/>
+  <link href="//code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
   <header id='header' name='header'>
@@ -79,6 +80,7 @@
 
   <!-- JS -->
   <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="//code.jquery.com/ui/1.11.2/jquery-ui.min.js"></script>
   <script type="text/javascript" src="/assets/site.js"></script>
 </body>
 </html>
