--- a/assets/_scss/_main.scss
+++ b/assets/_scss/_main.scss
@@ -143,9 +143,10 @@
 
 	#models-container {
 	  margin-bottom: 1em;
+	  font-size: 100%;
 	  
 	  div p {
-	    font-size: 0.8em;
+	    font-size: 0.9em;
 		margin: 0 0 1em;
 	  }
 	}
