Add auto generation of interior page links from headers; reorganize technical assistance

--- a/assets/_scss/_main.scss
+++ b/assets/_scss/_main.scss
@@ -106,6 +106,10 @@
           margin-top: $gutter/2;
           padding: 0;
         }
+
+		.here a {
+		  color: #b00;
+		}
       }
     }
     a {
