Add jquery-based "more" links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -81,6 +81,7 @@
   <!-- JS -->
   <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="//code.jquery.com/ui/1.11.2/jquery-ui.min.js"></script>
+  <script type="text/javascript" src="/assets/config-{{ page.locale }}.js"></script>
   <script type="text/javascript" src="/assets/site.js"></script>
 </body>
 </html>
