Add diagnostic CSS classes

--- a/assets/_scss/_main.scss
+++ b/assets/_scss/_main.scss
@@ -197,6 +197,12 @@
 	  font-weight: bold;
 	  font-style: normal;
 	}
+
+	p.issue a {
+	  font-weight: bold;
+	  color: blue;
+	  text-decoration: none;
+	}
   }
 }
 
