Add links to McKinsey report; sync from wiki

--- a/assets/_scss/_main.scss
+++ b/assets/_scss/_main.scss
@@ -182,6 +182,10 @@
 
 	.ui-corner-all { border-radius: 0 };
 	
+	.clear-block {
+	  @include clearfix();
+	}
+
 	.pullquote {
 	  margin: 0 0 1em 1em;
 	  float: right;
