--- a/assets/_scss/_main.scss
+++ b/assets/_scss/_main.scss
@@ -216,8 +216,9 @@
 	  background: #eee;
 	  padding: 1em;
 
+	  ul { padding-left: 1.25em }
 	  p { margin: 0 }
-	  p + p { margin-top: 1em }
+	  p + p, li + li p { margin-top: 1em }
 	}
 
 	/* bold first link in lists with paragraph styling, for emphasis */
@@ -240,14 +241,6 @@
 	a.more {
 	}
 
-	/* for diagnostics */
-	em {
-	  color: green;
-	  background: yellow;
-	  font-weight: bold;
-	  font-style: normal;
-	}
-
 	p.issue a {
 	  font-weight: bold;
 	  color: blue;
@@ -261,15 +254,6 @@
 	  margin: 0 0 $gutter;
 	  font-style: normal;
 	  color: #009;
-
-	  ul {
-	    padding: 0;
-		margin: 0;
-	  }
-
-	  li {
-	    list-style-type: none;
-	  }
     }
   }
 }
