Add Omniture tracking code

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -93,5 +93,8 @@
   <script type="text/javascript" src="//code.jquery.com/ui/1.11.2/jquery-ui.min.js"></script>
   <script type="text/javascript" src="/assets/config-{{ page.locale }}.js"></script>
   <script type="text/javascript" src="/assets/site.js"></script>
+
+  <!-- Omniture -->
+  {% include en/parts/omniture.html %}
 </body>
 </html>
