--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,7 @@
 <head>
   <title>{{ page.title }} | Data</title>
 
+  <meta http-equiv='X-UA-Compatible' content='IE=9'/>
   <meta name='viewport' content='width=device-width, initial-scale=1'/>
   <meta http-equiv='Content-Type' content='text/html; charset=utf-8'/>
   <meta name='description' content='{{ locale.description }}'/>
