Add ODRA energy assessment

--- a/assets/_scss/_main.scss
+++ b/assets/_scss/_main.scss
@@ -230,6 +230,10 @@
 	  text-align: center;
 	}
 
+	.space-before {
+	  margin-top: 4em;
+	}
+
 	/* We repurpose the <cite> tag to indicate text that should be initially hidden and shown with a "more" link,
 	   which is inserted by Javascript
 	*/
