Change "Data/Feedback" to "Help/Feedback"

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -89,7 +89,7 @@
   </footer>
 
   <div id='help'>
-    <h2 onclick='javascript:uvClick()'>Data/Feedback</h2>
+    <h2 onclick='javascript:uvClick()'>Help/Feedback</h2>
   </div>
 
   <!-- JS -->
