Add space-after style

--- a/assets/_scss/_main.scss
+++ b/assets/_scss/_main.scss
@@ -234,6 +234,10 @@
 	  margin-top: 4em;
 	}
 
+	.space-after {
+	  margin-bottom: 4em;
+	}
+
 	/* We repurpose the <cite> tag to indicate text that should be initially hidden and shown with a "more" link,
 	   which is inserted by Javascript
 	*/
