Fix for long (multi-lingual) page titles in sidebar

--- a/assets/_scss/_main.scss
+++ b/assets/_scss/_main.scss
@@ -364,9 +364,13 @@
       }
       h2,
       h3 {
+		/*
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
+		*/
+		text-indent: -24px;
+		padding-left: 24px;
       }
     }
   }
