Change pageName identifier

--- a/_includes/en/parts/adobe-analytics.html
+++ b/_includes/en/parts/adobe-analytics.html
@@ -16,7 +16,7 @@
   wbgData.site = {
     siteInfo: {
       siteLanguage: '{{ page.locale }}',
-      siteType: 'data',
+      siteType: 'ogdtoolkit',
       siteEnv: 'prod',
     },
 
